# magic

./: Cargo.toml  README.md
examples/: first_triangle.rs  shade_triangle.rs  textured_triangle.rs
magic/: Cargo.toml
magic-macros/: Cargo.toml  mipsiii.json
magic-macros/src/: lib.rs
magic-types/: Cargo.toml
magic-types/src/: lib.rs
magic/src/: decoder.rs  lib.rs
magic/tests/: decoder.rs
src/: lib.rs
tests/: mupen.rs
