[package]
name = "magic-macros"
version = "0.1.0"
authors = ["Andrew Wygle <awygle@gmail.com>"]
edition = "2018"

[dependencies]
serde = {version = "*", features = ["derive"]}
serde_json = "*"
ux = "*"
syn = "*"
quote = "*"
proc-macro2 = "*"
magic-types = {path = "../magic-types/"}
strum = "*"
strum_macros = "*"

[lib]
proc-macro = true
